add: new features and complete project to work

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
@@ -65,14 +65,22 @@
                 </div>
                 <div class="naval-chart-wrap">
                     <div id="homeNavalChart" class="naval-chart"></div>
-                    <div class="naval-axis-x">Interessancia (1-10)</div>
-                    <div class="naval-axis-y">Qualidade do jogo (A bom -> J ruim)</div>
+                    <div class="naval-scale-x" aria-hidden="true">
+                        <span>1</span><span>2</span><span>3</span><span>4</span><span>5</span><span>6</span><span>7</span><span>8</span><span>9</span><span>10</span>
+                    </div>
+                    <div class="naval-scale-y" aria-hidden="true">
+                        <span>A</span><span>B</span><span>C</span><span>D</span><span>E</span><span>F</span><span>G</span><span>H</span><span>I</span><span>J</span>
+                    </div>
+                    <div class="naval-axis-x">Interessância</div>
+                    <div class="naval-axis-y">Jogabilidade</div>
                 </div>
             </article>
         </section>
     </main>
     <footer class="site-footer">
         <div class="site-footer-inner">
+            <a href="https://github.com/Gabriel-Micael" target="_blank" rel="noopener noreferrer">GitHub</a>
+            <a href="https://www.instagram.com/gabriel.micael/" target="_blank" rel="noopener noreferrer">Instagram</a>
             <a href="https://wa.me/5535997569858" target="_blank" rel="noopener noreferrer">WhatsApp</a>
         </div>
     </footer>
@@ -80,4 +88,6 @@
     <script src="script.js"></script>
 </body>
 </html>
+
+
 
