--- a/profile.html
+++ b/profile.html
@@ -38,8 +38,6 @@
                 <input name="email" type="email" readonly>
                 <label>Nickname</label>
                 <input name="nickname" type="text" maxlength="30" required>
-                <label>Telefone</label>
-                <input name="phone" type="text" maxlength="30">
                 <button class="btn" type="submit">Salvar perfil</button>
             </form>
             <p id="feedback" class="feedback"></p>
@@ -94,6 +92,8 @@
     </main>
     <footer class="site-footer">
         <div class="site-footer-inner">
+            <a href="https://github.com/Gabriel-Micael" target="_blank" rel="noopener noreferrer">GitHub</a>
+            <a href="https://www.instagram.com/gabriel.micael/" target="_blank" rel="noopener noreferrer">Instagram</a>
             <a href="https://wa.me/5535997569858" target="_blank" rel="noopener noreferrer">WhatsApp</a>
         </div>
     </footer>
@@ -101,4 +101,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
+
+
 
