--- a/register.html
+++ b/register.html
@@ -26,7 +26,7 @@
                 <button class="btn" type="submit">Cadastrar e enviar codigo</button>
             </form>
             <div class="oauth-divider">ou</div>
-            <a class="btn btn-google" href="/auth/google">Cadastrar com Google</a>
+            <a id="googleRegisterBtn" class="btn btn-google" href="/auth/google">Cadastrar com Google</a>
             <div class="auth-links">
                 <a href="/login.html">Ja tenho conta</a>
             </div>
@@ -35,10 +35,15 @@
     </main>
     <footer class="site-footer">
         <div class="site-footer-inner">
+            <a href="https://github.com/Gabriel-Micael" target="_blank" rel="noopener noreferrer">GitHub</a>
+            <a href="https://www.instagram.com/gabriel.micael/" target="_blank" rel="noopener noreferrer">Instagram</a>
             <a href="https://wa.me/5535997569858" target="_blank" rel="noopener noreferrer">WhatsApp</a>
         </div>
     </footer>
     <script src="script.js"></script>
 </body>
 </html>
+
+
+
 
