--- a/login.html
+++ b/login.html
@@ -21,7 +21,7 @@
                 <button class="btn" type="submit">Entrar</button>
             </form>
             <div class="oauth-divider">ou</div>
-            <a class="btn btn-google" href="/auth/google">Continuar com Google</a>
+            <a id="googleLoginBtn" class="btn btn-google" href="/auth/google">Continuar com Google</a>
             <div class="auth-links">
                 <a href="/register.html">Criar conta</a>
                 <a href="/forgot-password.html">Esqueci minha senha</a>
@@ -31,10 +31,15 @@
     </main>
     <footer class="site-footer">
         <div class="site-footer-inner">
+            <a href="https://github.com/Gabriel-Micael" target="_blank" rel="noopener noreferrer">GitHub</a>
+            <a href="https://www.instagram.com/gabriel.micael/" target="_blank" rel="noopener noreferrer">Instagram</a>
             <a href="https://wa.me/5535997569858" target="_blank" rel="noopener noreferrer">WhatsApp</a>
         </div>
     </footer>
     <script src="script.js"></script>
 </body>
 </html>
+
+
+
 
