feat: achievement system, layout improvements, minor profile changes, and other things.

--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,7 @@
             <a href="/">Inicio</a>
             
             <a href="/profile.html">Perfil</a>
+            <a id="adminNavLink" class="hidden" href="/admin.html">Administrador</a>
             <button id="logoutBtn" class="btn btn-outline" type="button">Sair</button>
         </div>
     </nav>
